kubernetes/monitoring/uptime-kuma/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma
  namespace: monitoring
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`uptime-kuma.local.dontddos.me`)
      kind: Rule
      services:
        - name: uptime-kuma
          port: 3001
